--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #Data Source Properties
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://5.tcp.eu.ngrok.io:15356/judge_system?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/judge_system?useSSL=false&createDatabaseIfNotExist=true
+#5.tcp.eu.ngrok.io:15356
 spring.datasource.username=root
 spring.datasource.password=11111111
 #JPA Properties
